--- a/test/unit_test/Makefile
+++ b/test/unit_test/Makefile
@@ -1,6 +1,6 @@
 CC=g++
-#CFLAGS=-std=c++11 -O3 -Wall
-CFLAGS=-std=c++11 -g -O3 -Wall -pg -ftest-coverage -fprofile-arcs
+CFLAGS=-std=c++11 -O3 -Wall
+#CFLAGS=-std=c++11 -g -O3 -Wall -pg -ftest-coverage -fprofile-arcs
 INCLUDE=-I../../third_party/libgo/third_party/gtest/include
 LINK=-L../../third_party/libgo/third_party/gtest/build -llibgonet -llibgo -ldl -lgtest_main -lgtest -lpthread \
 	 -lboost_thread -lboost_system -lboost_regex -lpthread -static -static-libgcc -static-libstdc++
