--- a/test/test/Makefile
+++ b/test/test/Makefile
@@ -1,7 +1,7 @@
 CC=g++
-CFLAGS=-std=c++11 -g -Wall
-INCLUDE=-I../../src -I../../third_party/libgo/src
-LINK=-L../../build -L../../build/third_party/libgo -llibgonet -llibgo -ldl -lpthread \
+CFLAGS=-std=c++11 -g -Wall -O3
+INCLUDE=-I../.. -I../../third_party/libgo/third_party/gtest/include -I../../third_party/libgo -I../../third_party/libgo/libgo -I../../third_party/libgo/libgo/linux
+LINK=-L../../build/third_party/libgo -L../../third_party/libgo/third_party/gtest/build -llibgonet -llibgo -ldl -lgtest_main -lgtest -lpthread \
 	 -lboost_thread -lboost_system -lboost_regex -lpthread
 TARGET=$(patsubst %.cpp, %.t, $(wildcard *.cpp))
 
