update libgo, 调整测试代码

--- a/test/test/Makefile
+++ b/test/test/Makefile
@@ -1,4 +1,5 @@
 CC=g++
+#CFLAGS=-std=c++11 -g -Wall
 CFLAGS=-std=c++11 -g -Wall -O3
 INCLUDE=-I../.. -I../../third_party/libgo/third_party/gtest/include -I../../third_party/libgo -I../../third_party/libgo/libgo -I../../third_party/libgo/libgo/linux
 LINK=-L../../build/third_party/libgo -L../../third_party/libgo/third_party/gtest/build -llibgonet -llibgo -ldl -llibgo_main -lpthread \
