enable_boost_coroutine 改为option

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,6 +28,6 @@ install(TARGETS ${TARGET} LIBRARY DESTINATION "lib" ARCHIVE DESTINATION "lib")
 install(DIRECTORY libgonet/ DESTINATION "include/libgonet" FILES_MATCHING PATTERN "*.h")
 
 if (NOT NO_SUB)
-    set(ENABLE_BOOST_COROUTINE ON)
+    option(ENABLE_BOOST_COROUTINE "use boost coroutine" ON)
     add_subdirectory("third_party/libgo")
 endif()
