--- a/test/unit_test/Makefile
+++ b/test/unit_test/Makefile
@@ -1,9 +1,9 @@
 CC=g++
-#CFLAGS=-std=c++11 -O3 -Wall
-CFLAGS=-std=c++11 -g -O3 -Wall -pg -ftest-coverage -fprofile-arcs
+CFLAGS=-std=c++11 -g -Wall
+#CFLAGS=-std=c++11 -g -O3 -Wall -pg -ftest-coverage -fprofile-arcs
 INCLUDE=-I../.. -I../../third_party/libgo/third_party/gtest/include -I../../third_party/libgo -I../../third_party/libgo/libgo -I../../third_party/libgo/libgo/linux
 LINK=-L../../build/third_party/libgo -L../../third_party/libgo/third_party/gtest/build -llibgonet -llibgo -ldl -lgtest_main -lgtest -lpthread \
-	 -lboost_thread -lboost_system -lboost_regex -lpthread -static -static-libgcc -static-libstdc++
+	 -lboost_coroutine -lboost_context -lboost_thread -lboost_system -lboost_regex -lpthread -static -static-libgcc -static-libstdc++
 #LINK+=-static -static-libgcc -static-libstdc++
 TARGET=$(patsubst %.cpp, %.t, $(wildcard *.cpp))
 
