--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,10 +24,10 @@ set(CMAKE_CXX_FLAGS "-std=c++11 -Wall -Werror -fPIC -g -pg")
 set(CMAKE_CXX_FLAGS_DEBUG "-g -pg ${CMAKE_CXX_FLAGS}")
 
 aux_source_directory(libgonet SRC_LIST)
-include_directories("libgonet")
-include_directories("third_party/libgo")
-include_directories("third_party/libgo/libgo")
-include_directories("third_party/libgo/libgo/linux")
+include_directories("${PROJECT_SOURCE_DIR}/libgonet")
+include_directories("${PROJECT_SOURCE_DIR}/third_party/libgo")
+include_directories("${PROJECT_SOURCE_DIR}/third_party/libgo/libgo")
+include_directories("${PROJECT_SOURCE_DIR}/third_party/libgo/libgo/linux")
 set(TARGET "libgonet")
 
 add_library("${TARGET}" STATIC ${SRC_LIST})
@@ -37,6 +37,6 @@ install(TARGETS ${TARGET} LIBRARY DESTINATION "lib" ARCHIVE DESTINATION "lib")
 install(DIRECTORY libgonet/ DESTINATION "include/libgonet" FILES_MATCHING PATTERN "*.h")
 
 if (NOT NO_SUB)
-    option(ENABLE_BOOST_COROUTINE "use boost coroutine" ON)
+    option(ENABLE_BOOST_CONTEXT "use boost coroutine" ON)
     add_subdirectory("third_party/libgo")
 endif()
