--- a/test/test/Makefile
+++ b/test/test/Makefile
@@ -3,7 +3,7 @@ CC=g++
 CFLAGS=-std=c++11 -Wall -O3
 INCLUDE=-I../.. -I../../third_party/libgo/third_party/gtest/include -I../../third_party/libgo -I../../third_party/libgo/libgo -I../../third_party/libgo/libgo/linux
 LINK=-L../../build -L../../build/third_party/libgo -L../../third_party/libgo/third_party/gtest/build -llibgonet -llibgo -ldl -lpthread \
-	 -lboost_coroutine -lboost_context -lboost_thread -lboost_system -lboost_regex -lcares -lpthread -static
+	 -lboost_coroutine -lboost_context -lboost_thread -lboost_system -lboost_regex -lpthread -static
 LINK+=-lssl -lcrypto
 TARGET=$(patsubst %.cpp, %.t, $(wildcard *.cpp))
 
