--- a/test/httpd_recursive_epoll/Makefile
+++ b/test/httpd_recursive_epoll/Makefile
@@ -3,8 +3,8 @@ CFLAGS=-std=c++11 -Wall -g -O3
 INCLUDE=-I../.. -I../../third_party/libgo -I../../third_party/libgo/libgo -I../../third_party/libgo/libgo/linux
 LINK=-L../../build -L../../build/third_party/libgo -ltcmalloc_minimal -llibgo \
 	 -lboost_context -lboost_thread -lboost_system -ldl -lpthread
-CFLAGS+=-DPROFILE=1
-LINK+=-lprofiler -lunwind
+#CFLAGS+=-DPROFILE=1
+#LINK+=-lprofiler -lunwind
 LINK+=-static
 
 TARGET=$(patsubst %.cpp, %.t, $(wildcard *.cpp))
