add ENABLE_SYSTEM_LIBGO switch; remove predefined CMAKE_INSTALL_PREFIX

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,19 +24,25 @@ set(CMAKE_CXX_FLAGS "-std=c++11 -Wall -Werror -fPIC -g -pg")
 set(CMAKE_CXX_FLAGS_DEBUG "-g -pg ${CMAKE_CXX_FLAGS}")
 
 aux_source_directory(libgonet SRC_LIST)
-include_directories("${PROJECT_SOURCE_DIR}/libgonet")
-include_directories("${PROJECT_SOURCE_DIR}/third_party/libgo")
-include_directories("${PROJECT_SOURCE_DIR}/third_party/libgo/libgo")
-include_directories("${PROJECT_SOURCE_DIR}/third_party/libgo/libgo/linux")
+if (ENABLE_SYSTEM_LIBGO)
+else()
+	include_directories("${PROJECT_SOURCE_DIR}/libgonet")
+	include_directories("${PROJECT_SOURCE_DIR}/third_party/libgo")
+	include_directories("${PROJECT_SOURCE_DIR}/third_party/libgo/libgo")
+	include_directories("${PROJECT_SOURCE_DIR}/third_party/libgo/libgo/linux")
+endif()
 set(TARGET "libgonet")
 
 add_library("${TARGET}" STATIC ${SRC_LIST})
 
-set(CMAKE_INSTALL_PREFIX "/usr/local")
+#set(CMAKE_INSTALL_PREFIX "/usr/local")
 install(TARGETS ${TARGET} LIBRARY DESTINATION "lib" ARCHIVE DESTINATION "lib")
 install(DIRECTORY libgonet/ DESTINATION "include/libgonet" FILES_MATCHING PATTERN "*.h")
 
 if (NOT NO_SUB)
     option(ENABLE_BOOST_CONTEXT "use boost coroutine" ON)
-    add_subdirectory("third_party/libgo")
+	if (ENABLE_SYSTEM_LIBGO)
+	else()
+		add_subdirectory("third_party/libgo")
+	endif()
 endif()
