--- a/test/pingpong/CMakeLists.txt
+++ b/test/pingpong/CMakeLists.txt
@@ -17,7 +17,7 @@ include_directories("${PROJECT_SOURCE_DIR}/../../")
 link_directories("${PROJECT_SOURCE_DIR}/../../build")
 
 add_executable(pingpong_client client.cc)
-target_link_libraries(pingpong_client libgonet libgo boost_coroutine boost_context boost_regex boost_system boost_thread pthread -static -static-libgcc -static-libstdc++)
+target_link_libraries(pingpong_client libgonet libgo boost_coroutine boost_context boost_regex boost_system boost_thread pthread dl)
 
 add_executable(pingpong_server server.cc)
-target_link_libraries(pingpong_server libgonet libgo boost_coroutine boost_context boost_regex boost_system boost_thread pthread -static -static-libgcc -static-libstdc++)
+target_link_libraries(pingpong_server libgonet libgo boost_coroutine boost_context boost_regex boost_system boost_thread pthread dl)
