--- a/test/test/Makefile
+++ b/test/test/Makefile
@@ -1,14 +1,13 @@
 CC=g++
 CFLAGS=-std=c++11 -Wall -O3 -g
-INCLUDE=-I../.. -I../../third_party/libgo/third_party/gtest/include -I../../third_party/libgo -I../../third_party/libgo/libgo -I../../third_party/libgo/libgo/linux
-LINK=-L../../build -L../../build/third_party/libgo -L../../third_party/libgo/third_party/gtest/build -llibgonet -llibgo -ldl -lpthread \
-	 -lboost_coroutine -lboost_context -lboost_thread -lboost_system -lboost_regex
+INCLUDE=-I../..
+LINK=-L../../build -llibgonet -llibgo -lboost_coroutine -lboost_context -lboost_thread -lboost_system -lboost_regex -pthread -ldl
 
 #LINK+=-ltcmalloc_minimal
 #CFLAGS+=-DPROFILE=1
 #LINK+=-lprofiler -lunwind
 
-LINK+=-lpthread -lssl -lcrypto -static
+LINK+=-lssl -lcrypto
 TARGET=$(patsubst %.cpp, %.t, $(wildcard *.cpp))
 
 all : $(TARGET)
